[package]
name = "rtp-parse"
version = "0.1.0"
authors = ["Brian Baldino <bbaldino@gmail.com> "]
edition = "2021"

description = "RTP packet library"

license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/bbaldino/rtp-parse.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-cursor = "0.1.1"
anyhow = "1"
bitvec = "1.0.1"
bytes = "1.6.0"
