[package]
name = "rtp-parse"
version = "0.1.0"
authors = ["Brian Baldino <bbaldino@gmail.com> "]
edition = "2021"

description = "RTP packet library"

license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/bbaldino/rtp-parse.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1.6.0"
parsely-rs = { version = "0.1.2" }
bits-io = { version = "0.4.0" }
# TODO: we shouldn't depend on this directly here...should instead probably expose some aliases in bitcursor for the inner type it uses
bitvec = "1.0.1"
