[package]
name = "rtp-parse"
version = "0.1.0"
authors = ["Brian Baldino <bbaldino@gmail.com> "]
edition = "2021"

description = "RTP packet library"

license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/bbaldino/rtp-parse.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1.6.0"
parsely-rs = { version = "0.1.3" }

[dev-dependencies]
bits-io = "0.5.5"
